--- a/form-style.css
+++ b/form-style.css
@@ -73,3 +73,23 @@ body {
     color:#27ff01; /* Green label color for selected radio buttons */
   }
   
+
+
+
+
+  .button {
+    display: inline-block;
+    padding: 20px 24px;
+    margin-left: 40%;
+    background-color: #45fd42;
+    color: #060606;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 18px;
+    transition: background-color 0.3s, transform 0.2s;
+  }
+  
+  .button:hover {
+    background-color: #45fd40;
+    transform: scale(1.05);
+  }
